Refactor integration tests to remove dependency on Vert.X (#1128)
* Refactor integration tests - part 1 - changes to installation, refactor AdminIT, HttpCorsIT (#1074)

* init

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

finish tests in AdminIT

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

changes

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

Maros' comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

shorter list of kafka versions and different path for config file

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

do the same with extensions

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

add bridgeconfiguration and refactor HttpCorsIT

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

fixups

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* Maros' comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* change to run with all Kafka versions by default

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* resolve comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* Paolo's comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

---------

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* Refactor integration tests vol.2 - `ConsumerGeneratedNameIT` and `ConsumerIT` (#1116)

* changes

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

finish

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* remove logger

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* fix SeekIT

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* Paolo's comments

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* add javadoc

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* format assertions

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

---------

Signed-off-by: Lukas Kral <lukywill16@gmail.com>

* Refactor `InvalidProducerIT`, `OtherServicesIT`, and `TlsIT` with changes to BridgeExtension due to TLS Bridge (#1122)

* Refactor InvalidProducerIT, OtherServicesIT, and TlsIT wi